        document does not declare a schema attribute (issue #932).
      - Uncaught exceptions may cause LogFilter to fail, with dire consequences.
        Issue #931. Reported and contributed by Tal Liron.
      - The Restlet internal connector only serves from one thread (issue #937).
      - Securing JaxRepresentation by default (issue #785).
        Reported by Jim Trainor.

    - Enhancements
      - Added targetRef support to templates, allow reference variables to 
        resolve to the full reference (issue #935).
        Contributed by Jeremy Gustie.
      - Added Firewall feature.
        Contributed by Guillaume Blondeau.
      - Added RAML support in dedicated extension.

- 2.2.2 (08/05/2014)
    - Bugs fixed
      - Fixed generation of Android edition.
    - Enhancements
      - Updated agent.properties file with recent Opera user agent signature.

- 2.2.1 (05/06/2014)
    - Bugs fixed
      - Fixed missing internal FTP client connector registration.
      - Fixed missing internal HTTPS server isn't properly registered.
        Reported by Roy Olsen.
      - Fixed forgotten traces to the console #911, #905, #904.
        Reported by Emanuele Massara.
      - Fixed missing default values for DefaultSslContextFactory attributes, issue #903.
      - Removed unecessary ".properties" files from the distributions, issue #892.
      - Prevented NPE in org.httpclient.internal.HttpMethodCall.getStatusCode, issue #871.
        Reported by Claus Ibsen.
      - Fixed CompositeHelper.handle fails when Component has no inbound filters. Issue #865.
        Reported and contributed by Jeremy Gustie.
      - Stabilized Swagger documentation for JAX-RS applications. Issue #827.

- 2.2.0 (03/27/2014)
    - Enhancements
      - Integration of new Guice extension, issue #489.
        Reported and contributed by Tim Peierls.
      - Reverted Swagger extension to version 2.9,
        supporting only JAX-RS API. Issue #827.
    - Bugs fixed